Bug 169147 - Macro: Crash if operator Like has bad Pattern
Summary: Macro: Crash if operator Like has bad Pattern
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-10-30 10:50 UTC by Kamil Landa
Modified: 2025-11-08 12:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kamil Landa 2025-10-30 10:50:02 UTC
I started to write the documentation for operator Like
https://bugs.documentfoundation.org/show_bug.cgi?id=152689#c0
but Libre crashed during testing


Run this macro to crash:



Sub operatorLikeCrash
	on local error goto bug
	MsgBox( "a [xyz" Like "a [*" )  ' bad Pattern: a [*
	exit sub
bug:
	MsgBox("Line " & Erl & chr(10) & "bug No " & Err & chr(10) & Error)
End Sub





Version: 25.8.3.1 (X86_64)
Build ID: 52ad9dd1c984050a9fb6932dbfb16e86a49e9758
CPU threads: 8; OS: Windows 10 X86_64 (build 17763); UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: cs-CZ
Calc: CL threaded
Comment 1 Kamil Landa 2025-10-30 10:53:41 UTC
Also crash in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6d020f728b573c8c33929f8c494f9b748f576fe5
CPU threads: 8; OS: Windows 10 X86_64 (build 17763); UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: en-US
Calc: CL threaded
Comment 2 Xisco Faulí 2025-10-30 11:19:58 UTC
Regression introduced by:

commit 38f731ff67142a423aa6f46dc3e92d094f86ffb1	[log]
author	Mike Kaganski <mike.kaganski@collabora.com>	Tue Apr 02 20:34:00 2024 +0500
committer	Mike Kaganski <mike.kaganski@collabora.com>	Tue Apr 02 19:47:35 2024 +0200
tree 92031cd3dde49eb37634de2b954b497301ab13be
parent 0fb98963c46013209d39c03c3d61ef52ccc504e2 [diff]

tdf#160478: fix Basic LIKE operator

Bisected with: linux64-24.8
Comment 3 Mike Kaganski 2025-10-30 12:40:38 UTC
https://gerrit.libreoffice.org/c/core/+/193202
Comment 4 Commit Notification 2025-10-30 17:19:36 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ab2560526ba7b745889cf509241ff17d0638cc2

tdf#169147: handle errors creating icu::RegexMatcher

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-10-30 18:17:45 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0be055db710f3f917ce566a6909d58767c258ff8

tdf#169147: handle errors creating icu::RegexMatcher

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Kamil Landa 2025-11-01 10:08:39 UTC
Confirmation, fixed

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 8; OS: Windows 10 X86_64 (build 17763); UI render: Skia/Raster; VCL: win
Locale: cs-CZ (cs_CZ); UI: en-US
Calc: CL threaded
Comment 7 Commit Notification 2025-11-04 12:18:08 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-3":

https://git.libreoffice.org/core/commit/0f23205b390085be25377ff82c1452462e8149bb

tdf#169147: handle errors creating icu::RegexMatcher

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.