tdf#169147: handle errors creating icu::RegexMatcher

Regression after commit 38f731ff67142a423aa6f46dc3e92d094f86ffb1
(tdf#160478: fix Basic LIKE operator, 2024-04-02).

Change-Id: I4fae01e56cb91d54adba54c3787f576f60f8b1f0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193202
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 3ab2560526ba7b745889cf509241ff17d0638cc2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193220
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>